refactor: Task Persistence Layer 완전 구현 및 아키텍처 정리
- Task/TaskMessageOutBox Adapter 및 Repository 완전 구현
- Manager → Component 패키지 리팩토링 (Application Layer 표준화)
- MustIt Seller 이름 정규화 (Musit → MustIt)
- 미사용 Seller Detail 서비스/포트 제거
- Change Detection 도메인 제거 (미사용)
- 중복 문서 제거 (docs/coding_convention/coding_convention/)
- .specstory 히스토리 제거