@@ -6,21 +6,29 @@ import com.ryuqq.crawlinghub.adapter.out.persistence.product.repository.ProductS
 import com.ryuqq.crawlinghub.application.product.port.out.LoadProductSyncOutboxPort;
 import com.ryuqq.crawlinghub.domain.product.ProductSyncOutbox;
 import com.ryuqq.crawlinghub.domain.product.SyncStatus;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 /**
- * ProductSyncOutbox Query Adapter (CQRS - Query)
+ * ProductSyncOutbox Query Adapter - CQRS Query Adapter (읽기 전용)
  *
- * <p><strong>책임:</strong></p>
+ * <p><strong>CQRS 패턴 적용 - Query 작업만 수행 ⭐</strong></p>
  * <ul>
- *   <li>✅ Read 작업 전담</li>
- *   <li>✅ LoadProductSyncOutboxPort 구현</li>
- *   <li>✅ Entity → Domain 변환</li>
- *   <li>✅ JPA Repository 호출</li>
+ *   <li>✅ Read 작업 전용 (findById, findByStatus)</li>
+ *   <li>✅ Entity → Domain 변환 (Mapper 사용)</li>
+ *   <li>✅ N+1 문제 방지</li>
+ *   <li>✅ ProductSyncOutbox Domain 반환</li>
+ * </ul>
+ *
+ * <p><strong>주의사항:</strong></p>
+ * <ul>
+ *   <li>❌ Write 작업은 ProductSyncOutboxCommandAdapter에서 처리</li>
+ *   <li>❌ Command 작업은 이 Adapter에서 금지</li>
  * </ul>
  *
  * @author ryu-qqq
@@ -29,38 +37,69 @@ import java.util.stream.Collectors;
 @Component
 public class ProductSyncOutboxQueryAdapter implements LoadProductSyncOutboxPort {
 
-    private final ProductSyncOutboxJpaRepository repository;
+    private final ProductSyncOutboxJpaRepository jpaRepository;
     private final ProductSyncOutboxMapper mapper;
 
+    /**
+     * Adapter 생성자
+     *
+     * @param jpaRepository JPA Repository
+     * @param mapper Entity → Domain Mapper
+     */
     public ProductSyncOutboxQueryAdapter(
-        ProductSyncOutboxJpaRepository repository,
+        ProductSyncOutboxJpaRepository jpaRepository,
         ProductSyncOutboxMapper mapper
     ) {
-        this.repository = Objects.requireNonNull(repository, "repository must not be null");
+        this.jpaRepository = Objects.requireNonNull(jpaRepository, "jpaRepository must not be null");
         this.mapper = Objects.requireNonNull(mapper, "mapper must not be null");
     }
 
+    /**
+     * ID로 ProductSyncOutbox 조회
+     *
+     * <p>Entity 조회 후 Domain으로 변환합니다.</p>
+     *
+     * @param outboxId Outbox ID (null 불가)
+     * @return ProductSyncOutbox Domain (없으면 Optional.empty())
+     * @throws IllegalArgumentException outboxId가 null인 경우
+     */
     @Override
-    public java.util.Optional<ProductSyncOutbox> findById(Long outboxId) {
+    @Transactional(readOnly = true)
+    public Optional<ProductSyncOutbox> findById(Long outboxId) {
         Objects.requireNonNull(outboxId, "outboxId must not be null");
 
-        return repository.findById(outboxId)
+        return jpaRepository.findById(outboxId)
             .map(mapper::toDomain);
     }
 
+    /**
+     * 상태로 ProductSyncOutbox 목록 조회
+     *
+     * <p>Entity 조회 후 Domain으로 변환합니다.</p>
+     *
+     * @param status SyncStatus (null 불가)
+     * @param limit 최대 조회 개수
+     * @return ProductSyncOutbox Domain 목록
+     * @throws IllegalArgumentException status가 null인 경우
+     */
     @Override
+    @Transactional(readOnly = true)
     public List<ProductSyncOutbox> findByStatus(SyncStatus status, int limit) {
         Objects.requireNonNull(status, "status must not be null");
 
         ProductSyncOutboxEntity.SyncStatus entityStatus = toEntityStatus(status);
-        List<ProductSyncOutboxEntity> entities = repository.findByStatusOrderByCreatedAtAsc(entityStatus);
-
-        return entities.stream()
-            .limit(limit)
+        return jpaRepository.findByStatusOrderByCreatedAtAsc(entityStatus, PageRequest.of(0, limit))
+            .stream()
             .map(mapper::toDomain)
-            .collect(Collectors.toList());
+            .toList();
     }
 
+    /**
+     * Domain SyncStatus를 Entity SyncStatus로 변환
+     *
+     * @param domainStatus Domain SyncStatus
+     * @return Entity SyncStatus
+     */
     private ProductSyncOutboxEntity.SyncStatus toEntityStatus(SyncStatus domainStatus) {
         return switch (domainStatus) {
             case PENDING -> ProductSyncOutboxEntity.SyncStatus.PENDING;
